--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^0.8.4",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
