--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "history": "^1.12.5",
     "react": "^0.14.0",
     "react-bootstrap": "^0.27.2",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.3"
+    "react-router": "^1.0.0-rc3",
+    "redux": "^3.0.3",
+    "redux-logger": "^2.0.4",
+    "redux-router": "^1.0.0-beta3",
+    "redux-thunk": "^1.0.0"
   }
 }
