Change to async action

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "bluebird": "^2.10.2",
     "history": "^1.12.5",
+    "immutable": "^3.7.5",
     "react": "^0.14.0",
     "react-bootstrap": "^0.27.2",
     "react-dom": "^0.14.0",
