--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "dependencies": {
     "bluebird": "^2.10.2",
     "express": "^4.13.3",
+    "font-awesome": "^4.4.0",
     "history": "^1.12.5",
     "immutable": "^3.7.5",
     "react": "^0.14.2",
     "react-bootstrap": "^0.27.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0-rc4",
+    "react-router": "^1.0.0",
     "redux": "^3.0.3",
     "redux-logger": "^2.0.4",
     "redux-router": "^1.0.0-beta3",
