--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.20.2",
+    "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
