--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "bluebird": "^2.10.2",
+    "bootstrap": "^3.3.5",
     "express": "^4.13.3",
     "font-awesome": "^4.4.0",
     "history": "^1.12.5",
